<resources>
	<string name="cancel_button_text">Cancel</string>
	<string name="charisma_field_description">Charisma</string>
	<string name="class_field_description">Class</string>
	<string name="constitution_field_description">Constitution</string>
	<string name="delete_text">Delete</string>
	<string name="dexterity_field_description">Dexterity</string>
	<string name="edit_text">Edit</string>
	<string name="fill_necessary_fields_text">Please fill all necessary fields</string>
	<string name="import_item_text">Import</string>
	<string name="clear_db_text">Clear DB</string>
	<string name="intelligence_field_description">Intelligence</string>
	<string name="name_field_description">Name</string>
	<string name="save_button_text">Save</string>
	<string name="strength_field_description">Strength</string>
	<string name="race_field_description">Race</string>
	<string name="wisdom_field_description">Wisdom</string>
    <string name="strength_short_field_description">STR</string>
	<string name="dexterity_short_field_description">DEX</string>
	<string name="constitution_short_field_description">CON</string>
	<string name="intelligence_short_field_description">INT</string>
	<string name="wisdom_short_field_description">WIS</string>
	<string name="charisma_short_field_description">CHA</string>
    <string name="level_field_description">Level</string>
    <string name="acrobatics">Acrobatics</string>
	<string name="animal_handling">Animal Handling</string>
	<string name="arcana">Arcana</string>
	<string name="athletics">Athletics</string>
	<string name="deception">Deception</string>
	<string name="history">History</string>
	<string name="insight">Insight</string>
	<string name="intimidation">Intimidation</string>
	<string name="investigation">Investigation</string>
	<string name="medicine">Medicine</string>
	<string name="nature">Nature</string>
	<string name="perception">Perception</string>
	<string name="performance">Performance</string>
	<string name="persuasion">Persuasion</string>
	<string name="religion">Religion</string>
	<string name="sleight_of_hand">Sleight of Hand</string>
	<string name="stealth">Stealth</string>
	<string name="survival">Survival</string>
    <string name="proficient">proficient</string>
	<string name="nonproficient">nonproficient</string>
	<string name="expertise">expertise</string>
</resources>
