<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:padding="16dp"
		>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/name_field"
			android:text="@string/name_field_description" />

		<EditText
			android:id="@+id/name_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="name"
			android:inputType="textPersonName"
			android:minHeight="48dp" />

		<TextView
			android:id="@+id/textView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/level_field"
			android:text="@string/level_field_description" />

		<EditText
			android:id="@+id/level_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:importantForAutofill="no"
			android:inputType="number"
			android:minHeight="48dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/race_field"
			android:text="@string/race_field_description" />

		<TextView
			android:id="@+id/race_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginVertical="8dp"
			android:background="@drawable/popup_button_background"
			android:padding="8dp"
			android:textColor="?editTextColor"
			android:textSize="16sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/class_field"
			android:text="@string/class_field_description" />

		<TextView
			android:id="@+id/class_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginVertical="8dp"
			android:background="@drawable/popup_button_background"
			android:padding="8dp"
			android:textColor="?editTextColor"
			android:textSize="16sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/strength_field"
			android:text="@string/strength_field_description" />

		<EditText
			android:id="@+id/strength_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:importantForAutofill="no"
			android:inputType="number"
			android:minHeight="48dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/dexterity_field"
			android:text="@string/dexterity_field_description" />

		<EditText
			android:id="@+id/dexterity_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:importantForAutofill="no"
			android:inputType="number"
			android:minHeight="48dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/constitution_field"
			android:text="@string/constitution_field_description" />

		<EditText
			android:id="@+id/constitution_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:importantForAutofill="no"
			android:inputType="number"
			android:minHeight="48dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/intelligence_field"
			android:text="@string/intelligence_field_description" />

		<EditText
			android:id="@+id/intelligence_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:importantForAutofill="no"
			android:inputType="number"
			android:minHeight="48dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/wisdom_field"
			android:text="@string/wisdom_field_description" />

		<EditText
			android:id="@+id/wisdom_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:importantForAutofill="no"
			android:inputType="number"
			android:minHeight="48dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@id/charisma_field"
			android:text="@string/charisma_field_description" />

		<EditText
			android:id="@+id/charisma_field"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:importantForAutofill="no"
			android:inputType="number"
			android:minHeight="48dp" />

		<Button
			android:id="@+id/add_character_button"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/save_button_text"
			/>

		<Button
			android:id="@+id/cancel_adding_character_button"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/cancel_button_text"
			/>

	</LinearLayout>

</ScrollView>
